java_library(
    name = "qsync",
    srcs = glob(["*.java"]),
    visibility = [
        "//querysync:__subpackages__",
        "//javatests/com/google/devtools/intellij/blaze/plugin/aswb:__pkg__",
    ],
    deps = [
        "@jsr305_annotations//jar",
        "//common/experiments",
        "//querysync/java/com/google/idea/blaze/qsync/artifacts",
        "//querysync/java/com/google/idea/blaze/qsync/cc",
        "//querysync/java/com/google/idea/blaze/qsync/deps",
        "//querysync/java/com/google/idea/blaze/qsync/java",
        "//querysync/java/com/google/idea/blaze/qsync/project",
        "//querysync/java/com/google/idea/blaze/qsync/project:language_class_java_proto",
        "//querysync/java/com/google/idea/blaze/qsync/project:project_java_proto",
        "//querysync/java/com/google/idea/blaze/qsync/query",
        "//querysync/java/com/google/idea/blaze/qsync/query:querysummary_java_proto",
        "//shared",
        "//shared:artifact",
        "//shared:vcs",
        "//third_party/java/auto_value",
        "@com_google_guava_guava//jar",
        "@protobuf//:protobuf_java",
        "@error_prone_annotations//jar",
    ],
)
